--- a/trunk/ssf/web/docroot/WEB-INF/web.xml
+++ b/trunk/ssf/web/docroot/WEB-INF/web.xml
@@ -62,7 +62,7 @@
 	</listener>
 
     <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+        <listener-class>com.sitescape.ef.util.Log4jConfigListener</listener-class>
     </listener>
 
 	<listener>
@@ -144,5 +144,12 @@
         <taglib-uri>http://www.sitescape.com/tags-portletadapter</taglib-uri>
         <taglib-location>/WEB-INF/tags/ssf-portletadapter.tld</taglib-location>
     </taglib>
+
+	<resource-ref>
+		<res-ref-name>jdbc/SiteScapePool</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+		<res-sharing-scope>Shareable</res-sharing-scope>
+	</resource-ref>
 
 </web-app>
