--- a/ssf/web/docroot/WEB-INF/web.xml
+++ b/ssf/web/docroot/WEB-INF/web.xml
@@ -42,7 +42,7 @@
 		<filter-class>com.sitescape.ef.web.servlet.filter.OpenSessionInViewFilter</filter-class>
 	</filter>-->
 
-	<filter>
+	<!--<filter>
 		<filter-name>principalInjectionFilter</filter-name>
 		<filter-class>com.sitescape.ef.web.servlet.filter.PrincipalInjectionFilter</filter-class>
 	</filter>
@@ -55,7 +55,7 @@
 	<filter-mapping>
 		<filter-name>principalInjectionFilter</filter-name>
 		<servlet-name>portletAdapter</servlet-name>
-	</filter-mapping>
+	</filter-mapping>-->
 
 	<listener>
 		<listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
