--- a/trunk/ssf/web/docroot/WEB-INF/web.xml
+++ b/trunk/ssf/web/docroot/WEB-INF/web.xml
@@ -42,6 +42,11 @@
 		<filter-class>com.sitescape.ef.web.servlet.filter.OpenSessionInViewFilter</filter-class>
 	</filter>-->
 
+	<filter>
+		<filter-name>loginFilter</filter-name>
+		<filter-class>com.sitescape.ef.web.servlet.filter.LoginFilter</filter-class>
+	</filter>
+	
 	<!--<filter>
 		<filter-name>principalInjectionFilter</filter-name>
 		<filter-class>com.sitescape.ef.web.servlet.filter.PrincipalInjectionFilter</filter-class>
@@ -56,6 +61,16 @@
 		<filter-name>principalInjectionFilter</filter-name>
 		<servlet-name>portletAdapter</servlet-name>
 	</filter-mapping>-->
+
+	<filter-mapping>
+		<filter-name>loginFilter</filter-name>
+		<servlet-name>dispatcher</servlet-name>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>loginFilter</filter-name>
+		<servlet-name>portletAdapter</servlet-name>
+	</filter-mapping>
 
 	<listener>
 		<listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
