--- a/ssf/web/docroot/WEB-INF/classes/content/administration.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/administration.properties
@@ -1,9 +1,9 @@
 ##
-## Resource bundle file for ss_forum portlet
+## Resource bundle file for ss_administration portlet
 ##
 ## Note: Do not add any other messages here.
 ##
 
-javax.portlet.title=Forum
-javax.portlet.short-title=Forum
-javax.portlet.keywords=Forum
+javax.portlet.title=Sitescape Administration
+javax.portlet.short-title=Sitescape Administration
+javax.portlet.keywords=Administration
