--- a/ssf/web/docroot/WEB-INF/log4j.properties
+++ b/ssf/web/docroot/WEB-INF/log4j.properties
@@ -15,4 +15,4 @@ log4j.appender.logfile.MaxBackupIndex=3
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.category.org.hibernate=INFO
-#log4j.category.org.springframework=DEBUG
+log4j.category.org.springframework=WARN
