--- a/trunk/ssf/samples/wsclient/build.xml
+++ b/trunk/ssf/samples/wsclient/build.xml
@@ -41,13 +41,33 @@
 		<java 
 			classname="com.sitescape.ef.samples.wsclient.MyFacadeClient"
 			classpath="${classes.dir}"
-			classpathref="project.classpath"
 			fork="true"
 			dir="${basedir}"
 			failonerror="true">
 			<jvmarg value="-Daxis.ClientConfigFile=client_deploy.wsdd"/>
 			<arg value="74"/>
 			<arg value="491"/>
+			<!-- Use explicit path elements rather than picking up everything
+			     in the lib directory so that we can - for documentation 
+			     purpose - see what archive files are needed on the client
+			     side -->
+			<classpath>
+				<pathelement path="${classpath}" />
+				<pathelement location="${project.dir}/lib/spring.jar" />
+				<pathelement location="${project.dir}/lib/axis.jar" />
+				<pathelement location="${project.dir}/lib/jaxrpc.jar" />
+				<pathelement location="${project.dir}/lib/commons-logging.jar" />
+				<pathelement location="${project.dir}/lib/commons-discovery.jar" />
+				<pathelement location="${project.dir}/lib/saaj.jar" />
+				<pathelement location="${project.dir}/lib/wsdl4j.jar" />
+				<pathelement location="${project.dir}/lib/wss4j.jar" />
+				<pathelement location="${project.dir}/lib/addressing.jar" />
+				<pathelement location="${project.dir}/lib/bcprov-jdk13-128.jar.jar" />
+				<pathelement location="${project.dir}/lib/commons-codec.jar" />
+				<pathelement location="${project.dir}/lib/opensaml.jar" />
+				<pathelement location="${project.dir}/lib/xalan.jar" />
+				<pathelement location="${project.dir}/lib/xmlsec.jar" />
+			</classpath>
 		</java>
 	</target>
 	
