--- a/trunk/ssf/build.properties
+++ b/trunk/ssf/build.properties
@@ -48,7 +48,7 @@ web.dir=docroot
 ## Javadoc/Java2HTML Documentation
 ##
 
-api.dir=${project.dir}/api
+api.dir=${project.dir}/docs/api
 java2html.bat=${project.dir}/tools/java2html.bat
 
 ##
